# books

./: .gitignore  Makefile  README.md  SCRATCH  install.iss  install.ps1  justfile  kindle.py  log.py  metadata.py  models.py  pyproject.toml  requirements.txt  tabs.py
books/: book.py  constants.py  conversion_thread.py  download_result.py  downloads_table_model.py  edit_book_dialog.py  fonts.py  job.py  kindle_monitor_thread.py  library.py  library_tab.py  library_table_model.py  library_table_view.py  main.py  main_window.py  metadata_result.py  multi_column_sort_proxy_model.py  search_result.py  search_results_table_model.py  settings.py  themed_window.py
src/books/: config.py  custom_widgets.py  ebook.py  kindle.py  log.py  main.py  main_window.py  models.py  table_models.py  tabs.py  utils.py  windows.py  workers.py
src/books/core/: config.py  constants.py  fonts.py  library.py  log.py  utils.py
src/books/core/models/: book.py  download_result.py  job.py  log_entry.py  metadata_result.py  search_result.py
src/books/dialogs/: edit_book_dialog.py  metadata_search_dialog.py
src/books/tabs/: downloads_tab.py  library_tab.py  search_tab.py
src/books/threads/: conversion_thread.py  download_thread.py  import_thread.py  kindle_monitor_thread.py  log_file_loader_thread.py  metadata_search_thread.py  search_thread.py
src/books/view_models/: downloads_table_model.py  library_table_model.py  log_table_model.py  metadata_table_model.py  multi_column_sort_proxy_model.py  search_results_table_model.py
src/books/views/: downloads_table_view.py  library_table_view.py  search_table_view.py
src/books/windows/: log_viewer_window.py  main_window.py
thoth/: download_thread.py  downloads_tab.py  downloads_table_view.py  library.py  log.py  main.py  main_window.py  metadata_search_dialog.py  metadata_table_model.py  search_tab.py  search_table_view.py  search_thread.py  settings.py  utils.py
