[project]
name = "books"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kyle Kestell", email = "kyle@kestell.org"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pyside6>=6.7.2",
    "requests>=2.32.3",
    "psutil>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "lxml>=5.3.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.26.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "nuitka>=2.4.2",
    "pyment>=0.3.3",
]
