[project]
name = "thoth"
version = "0.4.0"
description = ""
authors = [
    {name = "Kyle Kestell", email = "kyle@kestell.org"}
]
readme = "README.md"
requires-python = "<3.14,>=3.9"
dependencies = [
    "pyside6>=6.8.1",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "requests>=2.32.3,<3.0.0",
    "psutil>=6.1.1,<7.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "lxml>=5.3.0,<6.0.0",
    "python-levenshtein>=0.26.1,<0.27.0",
    "nh3>=0.2.20,<0.3.0",
    "thefuzz>=0.22.1,<0.23.0",
    "aiohttp>=3.11.11,<4.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "qasync>=0.27.1,<0.28.0"
]

[dependency-groups]
dev = [
    "nuitka>=2.5.9"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]